--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -5,3 +5,7 @@
     background-color: rgb(54, 83, 87);
     font-family: 'Impact';
 }
+
+.calculator {
+    background-color: rgb(178, 127, 127);
+}
