--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -3,12 +3,13 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(54, 83, 87);
-    font-family: 'Impact';
+    font-family: 'Ariel';
     min-height: 100vh;
 }
 
 .calculator {
     background-color: rgb(178, 127, 127);
+    color: aliceblue;
     padding: 20px;
     width: 310px;
     border-radius: 18px;
@@ -16,7 +17,8 @@
 
 .display {
     width: 100%;
-    padding: 12px;
+    padding: 15px;
+    text-align: center;
 }
 
 
