--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -26,6 +26,12 @@
     font-size: 26px;
      text-align: center;
      font-weight: bold;
-     margin-bottom: 20px;  
+     margin-bottom: 20px; 
+ 
+}
+
+.display {
+    width: 100%;
+    
 }
 
