--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -36,6 +36,9 @@
     margin-bottom: 20px;
     font-size: 20px;
     text-align: right;
+    border: 1px solid rgb(230, 222, 208);
+    border-radius: 6px;
+    
 
 }
 
