--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -38,7 +38,9 @@
     text-align: right;
     border: 1px solid rgb(230, 222, 208);
     border-radius: 6px;
-    
-
 }
 
+.button {
+    background-color: rgb(137, 165, 152);
+    padding: 16px;
+}
