--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -43,6 +43,7 @@
 .button {
     background-color: rgb(137, 165, 152);
     padding: 16px;
-    color: white;
+    color: black;
     font-size: 18px;
+    border: none;
 }
