--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -42,8 +42,9 @@
 
 .button {
     background-color: rgb(137, 165, 152);
-    padding: 16px;
+    padding: 14px;
     color: black;
     font-size: 18px;
     border: none;
+    border-radius: 8px;
 }
