--- a/src/Components/Calculator.css
+++ b/src/Components/Calculator.css
@@ -11,14 +11,8 @@
     background-color: rgb(178, 127, 127);
     color: aliceblue;
     padding: 20px;
-    width: 310px;
+    width: 370px;
     border-radius: 18px;
-}
-
-.display {
-    width: 100%;
-    padding: 15px;
-    text-align: center;
 }
 
 
@@ -31,8 +25,8 @@
 }
 
 .display {
-    width: 100%;
-    padding: 14px;
+    width: 350px;
+    padding: 10px;
     margin-bottom: 20px;
     font-size: 20px;
     text-align: right;
@@ -50,6 +44,14 @@
     cursor: pointer;
 }
 
+
 .buttons-grid {
     display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
+
+.clear-button {
+    background-color:  rgb(137, 165, 152);
+    grid-column: span 4;
+  }
